--- a/src/exercise/web/complete/edit.html
+++ b/src/exercise/web/complete/edit.html
@@ -1,15 +1,4 @@
-<section layout="row">
-  <md-button class="md-icon-button md-fab md-mini md-primary" style="font-size:24px;"
-             aria-label="Help">
-    <md-icon class="mdi mdi-help-circle">
-    </md-icon>
-    <md-tooltip>
-      Complete a phrase using a selection of options.
-    </md-tooltip>
-  </md-button>
-  <h4 flex>Complete</h4>
-</section>
-
+<sl-top-edit name="Complete Exercise" help=" Complete a phrase using a selection of options."></sl-top-edit>
 <section layout="row">
   <div flex ng-repeat="item in exercise.items">
     <md-input-container ng-if="item.type=='txt'">
