--- a/src/exercise/web/mix/edit.html
+++ b/src/exercise/web/mix/edit.html
@@ -1,15 +1,6 @@
-<section layout="row">
-  <md-button class="md-icon-button md-fab md-mini md-primary" style="font-size:24px;"
-             aria-label="Help">
-    <md-icon class="mdi mdi-help-circle">
+<sl-top-edit name="Mix phrase" help="Phrase words will be mixed and the student will have to put them in the right order."></sl-top-edit>
 
-    </md-icon>
-    <md-tooltip>
-      Phrase words will be mixed and the student will have to put them in the right order.
-    </md-tooltip>
-  </md-button>
-  <h4 flex>Mix phrase</h4>
-</section>
+
 <section>
   <md-input-container >
     <label>Phrase</label>
