--- a/src/exercise/web/question/edit.html
+++ b/src/exercise/web/question/edit.html
@@ -1,15 +1,9 @@
-<section layout="row">
-  <md-button class="md-icon-button md-fab md-mini md-primary" style="font-size:24px;"
-             aria-label="Help">
-    <md-icon class="mdi mdi-help-circle">
+<sl-top-edit
+  name="Question & Answers"
+  help="A question with a few possible answers, at least one answer must be correct.">
+</sl-top-edit>
 
-    </md-icon>
-    <md-tooltip>
-      A question with a few possible answers, at least one answer must be correct.
-    </md-tooltip>
-  </md-button>
-  <h4 flex>Edit Question & Answers</h4>
-</section>
+
 <section layout="column">
   <md-input-container flex>
     <label></label>
