--- a/src/exercise/web/text/edit.html
+++ b/src/exercise/web/text/edit.html
@@ -1,16 +1,7 @@
-<section layout="row">
-  <md-button class="md-icon-button md-fab md-mini md-primary" style="font-size:24px;"
-             aria-label="Help">
-    <md-icon class="mdi mdi-help-circle">
-
-    </md-icon>
-    <md-tooltip>
-      Explanation, or a text easy that might follow with questions
-    </md-tooltip>
-  </md-button>
-  <h4 flex>Edit Text</h4>
-</section>
-
+<sl-top-edit
+  name="Edit Text"
+  help="Explanation, or a text easy that might follow with questions">
+</sl-top-edit>
 
 <md-input-container>
   <label>Text</label>
