--- a/src/exercise/web/video/edit.html
+++ b/src/exercise/web/video/edit.html
@@ -1,16 +1,7 @@
-<section layout="row">
-  <md-button class="md-icon-button md-fab md-mini md-primary" style="font-size:24px;"
-             aria-label="Help">
-    <md-icon class="mdi mdi-help-circle">
-    </md-icon>
-    <md-tooltip>
-      Add a link to a youtube clip
-    </md-tooltip>
-  </md-button>
-  <h4 flex>Youtube Video</h4>
-</section>
-
-
+<sl-top-edit
+  name="Youtube Video"
+  help="Add a link to a youtube clip">
+</sl-top-edit>
 <section>
   <md-input-container>
     <label>Video URL</label>
