--- a/src/exercise/web/vocabulary/edit.html
+++ b/src/exercise/web/vocabulary/edit.html
@@ -1,17 +1,7 @@
-
-<section layout="row">
-  <md-button class="md-icon-button md-fab md-mini md-primary" style="font-size:24px;"
-             aria-label="Help">
-    <md-icon class="mdi mdi-help-circle">
-
-    </md-icon>
-    <md-tooltip>
-      A vocabulary, a set of words and meanings/translation
-    </md-tooltip>
-  </md-button>
-  <h4 flex>Vocabulary</h4>
-</section>
-
+<sl-top-edit
+  name="Vocabulary"
+  help="A vocabulary, a set of words and meanings/translation">
+</sl-top-edit>
 
 <div layout="row" ng-repeat="item in exercise.items">
   <md-input-container flex>
