--- a/src/editor/web/edit/edit.html
+++ b/src/editor/web/edit/edit.html
@@ -5,13 +5,15 @@
         <label>Lesson Name</label>
         <input ng-model="edit.lesson.name">
       </md-input-container>
+      <md-select placeholder="Learning Language" ng-model="edit.lesson.learning_language">
+        <md-option ng-repeat="l in edit.languages" value="{{l._id}}">{{l.name}}</md-option>
+      </md-select>
+      <md-select placeholder="Explanation Language" ng-model="edit.lesson.explanation_language">
+        <md-option ng-repeat="l in edit.languages" value="{{l._id}}">{{l.name}}</md-option>
+      </md-select>
       <md-input-container flex="25">
-        <label>Language</label>
-        <input ng-model="edit.lesson.name">
-      </md-input-container>
-      <md-input-container flex="25">
-        <label>Comment</label>
-        <input ng-model="edit.lesson.name">
+        <label>Description</label>
+        <input ng-model="edit.lesson.description">
       </md-input-container>
     </md-card-content>
   </md-card>
