--- a/src/editor/web/edit/edit.html
+++ b/src/editor/web/edit/edit.html
@@ -1,21 +1,29 @@
 <section>
   <md-card>
-    <md-card-content layout="row">
-      <md-input-container flex="25">
-        <label>Lesson Name</label>
-        <input ng-model="edit.lesson.name">
-      </md-input-container>
-      <md-select placeholder="Learning Language" ng-model="edit.lesson.learning_language">
-        <md-option ng-repeat="l in edit.languages" value="{{l._id}}">{{l.name}}</md-option>
-      </md-select>
-      <md-select placeholder="Explanation Language" ng-model="edit.lesson.explanation_language">
-        <md-option ng-repeat="l in edit.languages" value="{{l._id}}">{{l.name}}</md-option>
-      </md-select>
-      <md-input-container flex="25">
-        <label>Description</label>
-        <input ng-model="edit.lesson.description">
-      </md-input-container>
+    <md-card-content >
+      <md-content layout="row">
+        <md-input-container flex="25">
+          <label>Lesson Name</label>
+          <input ng-model="edit.lesson.name">
+        </md-input-container>
+        <md-select placeholder="Learning Language" ng-model="edit.lesson.learning_language">
+          <md-option ng-repeat="l in edit.languages" value="{{l._id}}">{{l.name}}</md-option>
+        </md-select>
+        <md-select placeholder="Explanation Language" ng-model="edit.lesson.explanation_language">
+          <md-option ng-repeat="l in edit.languages" value="{{l._id}}">{{l.name}}</md-option>
+        </md-select>
+        <md-input-container flex="25">
+          <label>Description</label>
+          <input ng-model="edit.lesson.description">
+        </md-input-container>
+      </md-content>
+      <md-content layout="row" layout-align="center center" >
+        <md-button ng-click="edit.save()">Save</md-button>
+        <md-button ng-click="edit.preview()">Preview</md-button>
+      </md-content>
+
     </md-card-content>
+
   </md-card>
 </section>
 
