--- a/src/home/web/scripts.html
+++ b/src/home/web/scripts.html
@@ -25,6 +25,7 @@
 
 
 <script src="/static/src/exercise/web/exercise_module.js"></script>
+<script src="/static/src/exercise/web/exercise_service.js"></script>
 <script src="/static/src/exercise/web/directives/top_edit/top_edit.js"></script>
 
 <script src="/static/src/exercise/web/vocabulary/edit.js"></script>
