lessons in editors are now real lessons

--- a/src/editor/web/list/list.html
+++ b/src/editor/web/list/list.html
@@ -18,7 +18,7 @@
           </span>
 
           <md-icon  style="font-size:24px;" class="mdi mdi-pencil-box-outline"
-                   ng-click="edit.edit($index)"><a href="/#/editor/{{l._id}}"></a></md-icon>
+                   ng-click="list.edit(l)"></a></md-icon>
             <md-icon style="font-size:24px;color:red" class="mdi mdi-delete"
                    ng-click="edit.remove($index)"></md-icon>
           </span>
